Fixes to resizing on mobile

--- a/shoe-board-web/src/components/Main/Home.scss
+++ b/shoe-board-web/src/components/Main/Home.scss
@@ -21,6 +21,14 @@ body, html {
     padding: 0.5rem 1rem;
     background-color: $background-medium;
   }
+
+  .right-sidebar {
+    height: 100%;
+  }
+
+  .left-nav {
+    height: 100%;
+  }
   
   .logo-container {
     display: flex;
