--- a/shoe-board-web/src/components/Navigation/Navigation.scss
+++ b/shoe-board-web/src/components/Navigation/Navigation.scss
@@ -1,31 +1,99 @@
 @import '../../styles/variables';
 
 .navigation {
-    width: 300px;
-    height: 100%;
     background-color: $background-medium;
-    padding: 20px;
-    overflow-y: auto;
-  }
-  
-  .nav-links {
-    list-style-type: none;
+    min-width: 100px;
+    max-width: 220px;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+
+
+    &.mobile {
+        min-width: auto;
+        max-width: 65px;
+        position: relative;
+        height: 100%;
+        padding: 0;
+        
+        &.open {
+            .nav-links {
+                transform: translateX(0);
+            }
+        }
+    }
+}
+
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
     padding: 0;
-  }
-  
-  .nav-links li {
-    margin-bottom: 20px;
-  }
-  
-  .nav-links a {
-    color: $text-primary;
-    text-decoration: none;
-    transition: color 0.3s;
-    font-size: 30px;
-    font-weight: bold;
-  }
-  
-  .nav-links a:hover {
-    color: $primary-color;
-  }
+    margin: 0 1rem 1rem 1rem;
+    z-index: 1000;
+    span {
+        width: 100%;
+        height: 2px;
+        background-color: $primary-color;
+        transition: all 0.3s ease;
+    }
+}
+
+.nav-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        margin-bottom: 1rem;
+
+        a {
+            color: $text-primary;
+            text-decoration: none;
+            font-size: 1.5rem;
+            display: block;
+            padding: 0.5rem;
+            border-radius: 4px;
+            transition: background-color 0.2s;
+            font-weight: bold;
+
+            &:hover {
+                background-color: $background-dark;
+                color: $primary-color;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .navigation {
+        width: auto;
+        
+        .burger-menu {
+            display: flex;
+        }
+
+        .nav-links {
+            position: fixed;
+            top: 80px;
+            left: 0;
+            width: 250px;
+            height: calc(100vh - 80px);
+            background-color: $background-medium;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+            padding: 1rem;
+            z-index: 999;
+
+            &.show {
+                transform: translateX(0);
+            }
+        }
+    }
+}
   
